<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pmac.covid19tracker.Usa">

    <ImageView
        android:id="@+id/imageViewBg20"
        android:layout_width="804dp"
        android:layout_height="998dp"
        android:contentDescription="@string/background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/usa"
        app:layout_constraintBottom_toTopOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usa" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/total" />

    <TextView
        android:id="@+id/textViewTotal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBg22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textViewDeath2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBg22" />

    <TextView
        android:id="@+id/textViewRecovered2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23" />

    <ImageView
        android:id="@+id/imageViewBg22"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/death"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeath2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal2"
        app:srcCompat="@drawable/deaths" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/recovered"
        app:layout_constraintBottom_toTopOf="@+id/textViewRecovered2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeath2"
        app:srcCompat="@drawable/recovered" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/condolence"
        app:layout_constraintBottom_toTopOf="@+id/imageView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecovered2"
        app:srcCompat="@drawable/condolence" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/source"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnRefresh20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView24"
        app:srcCompat="@drawable/source" />

    <ImageButton
        android:id="@+id/imgBtnRefresh20"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/refresh"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25"
        app:srcCompat="@drawable/refresh" />

    <ImageButton
        android:id="@+id/imgBtnP"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/philippines"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnRefresh20"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBtnRefresh20"
        app:srcCompat="@drawable/philippinef" />

    <ImageButton
        android:id="@+id/imgBtnC"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/china"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgBtnRefresh20"
        app:layout_constraintTop_toTopOf="@+id/imgBtnRefresh20"
        app:srcCompat="@drawable/italyf" />

</androidx.constraintlayout.widget.ConstraintLayout>
