<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pmac.covid19tracker.Italy">

    <ImageView
        android:id="@+id/imageViewBg21"
        android:layout_width="944dp"
        android:layout_height="1003dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/usa"
        app:layout_constraintBottom_toTopOf="@+id/imageView33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/italy" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotal4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:srcCompat="@drawable/total" />

    <TextView
        android:id="@+id/textViewTotal4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView33" />

    <TextView
        android:id="@+id/textViewDeath4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView34" />

    <TextView
        android:id="@+id/textViewRecovered4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView35" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/death"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeath4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal4"
        app:srcCompat="@drawable/deaths" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/recovered"
        app:layout_constraintBottom_toTopOf="@+id/textViewRecovered4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeath4"
        app:srcCompat="@drawable/recovered" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/condolence"
        app:layout_constraintBottom_toTopOf="@+id/imageView37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecovered4"
        app:srcCompat="@drawable/condolence" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/source"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnRefresh22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView36"
        app:srcCompat="@drawable/source" />

    <ImageButton
        android:id="@+id/imgBtnRefresh22"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/refresh"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView37"
        app:srcCompat="@drawable/refresh" />

    <ImageButton
        android:id="@+id/imgBtnC"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/usa"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnRefresh22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBtnRefresh22"
        app:srcCompat="@drawable/usaf" />

    <ImageButton
        android:id="@+id/imgBtnEarth"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/italy"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgBtnRefresh22"
        app:layout_constraintTop_toTopOf="@+id/imgBtnRefresh22"
        app:srcCompat="@drawable/chinaf" />
</androidx.constraintlayout.widget.ConstraintLayout>
